# human_detection_by_acf

./: CMakeLists.txt  README.md
include/: ACFDetector.h  UBT_cup_detector.h  chnsCompute.h  imPadMex.h  rgbConvertMex.h  sse.h  sse_neon.h
src/: ACFDetector.cpp  CMakeLists.txt  UBT_cup_detector.cpp  bbNms.cpp  chnsPyramid.cpp  detect_demo.cpp~  main.cpp  rgbConvert.cpp
